# routes/index.js
@@ -13,5 +13,7 @@ router.get('/', (req, res) => {
 // Mounting route modules
 router.use('/users', require('./users'));
 router.use('/groups', require('./groups'));
+router.use('/sessions', require('./sessions'));
+router.use('/resources', require('./resources'));
 
 module.exports = router;
